fix | fix typo in index.html

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title E-comerce page</title>
-    
+    <!--There are some bugs, please fix those before start your solution-->
 
 </head>
 <body>
